--- a/Scripts/OTZ.results.manuscript .Rmd
+++ b/Scripts/OTZ.results.manuscript .Rmd
@@ -315,17 +315,11 @@ change_2_3_plot
 #Plot functional group biomass over the 50-year simulation
 #Graph with commercially valuable predators
 plot1_comm <- data_1 %>%
-  filter(spp %in% commercial_predators) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp)) + xlab("Month") + ylab("Relative biomass") +
+  filter(spp %in% commercial_predators) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp)) + xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
 scale_color_discrete(type = "viridis", labels= c("Greenstriped" = expression(bold("Greenstriped rockfish")), "P. Ocean Perch"= expression(bold("P. ocean perch")), "Albacore" = expression(bold("Albacore")), "Arrowtooth" = expression(bold("Arrowtooth flounder")), "Canary rock."= expression(bold("Canary rock.")), "Lingcod"= expression(bold("Lingcod")), "Longspine thorny."= expression(bold("Longspine thornyhead")), "Other cephalopod"= expression(bold("Other cephal.")), "Sablefish"= expression(bold("Sablefish")), "Salmon"= expression(bold("Salmon")), "Sharks"= expression(bold("Sharks")), "Shelf rock."= expression(bold("Shelf rockfish")), "Shortspine thorny."= expression(bold("Shortspine thornyhead")), "Skates"= expression(bold("Skates")), "Slope rock."= expression(bold("Slope rockfish")), "Splitnose rockfish"= expression(bold("Splitnose rockfish")), "Widow rock."= expression(bold("Widow rockfish")), "Yellowtail rock."= expression(bold("Yellowtail rockfish")))) + labs(colour= "Commercially-harvested predators", title= "A") + standard_theme +
 ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/Sub.2/plot.commercial.50.jpeg")
 plot1_comm 
 
-
-
-direct.label(plot1_comm$spp, list("last.points", cex=.7, hjust=1))
-
-
-+ geom_dl(aes(label= spp), method= list(dl.trans(x= x - 2.0), "last.points", cex= 0.8))
 
 #Graph with non-commercially valuable predators
 new_noncomm <- noncommerical_predators[- c(9,7,11,4,6,17,1,12,8,10,19,5,16,18,15,14,13,3)] #Remove predators that have commercial value as well 
