--- a/Scripts/OTZ.results.manuscript .Rmd
+++ b/Scripts/OTZ.results.manuscript .Rmd
@@ -314,39 +314,53 @@ change_2_3_plot
 ```{r}
 #Plot functional group biomass over the 50-year simulation
 #Graph with commercially valuable predators
-plot1_comm <- data_1 %>%
-  filter(spp %in% commercial_predators) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp)) + xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = expression(bold("Greenstriped rockfish")), "P. Ocean Perch"= expression(bold("P. ocean perch")), "Albacore" = expression(bold("Albacore")), "Arrowtooth" = expression(bold("Arrowtooth flounder")), "Canary rock."= expression(bold("Canary rock.")), "Lingcod"= expression(bold("Lingcod")), "Longspine thorny."= expression(bold("Longspine thornyhead")), "Other cephalopod"= expression(bold("Other cephal.")), "Sablefish"= expression(bold("Sablefish")), "Salmon"= expression(bold("Salmon")), "Sharks"= expression(bold("Sharks")), "Shelf rock."= expression(bold("Shelf rockfish")), "Shortspine thorny."= expression(bold("Shortspine thornyhead")), "Skates"= expression(bold("Skates")), "Slope rock."= expression(bold("Slope rockfish")), "Splitnose rockfish"= expression(bold("Splitnose rockfish")), "Widow rock."= expression(bold("Widow rockfish")), "Yellowtail rock."= expression(bold("Yellowtail rockfish")))) + labs(colour= "Commercially-harvested predators", title= "A") + standard_theme +
-ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/Sub.2/plot.commercial.50.jpeg")
-plot1_comm 
+Predator_value_ts <- Predator_value %>% rename(spp= "species")
+data_1_high <- data_1 %>% filter(spp %in% diet_over_0.05) %>% left_join (Predator_value_ts, by= "spp") 
+data_1_high[1:600, 4] <- "Neither"
+data_1_high$Value <- factor(data_1_high$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
+data_2_high <- data_2 %>% filter(spp %in% diet_over_0.05) %>% left_join (Predator_value_ts, by= "spp") 
+data_2_high[1:600, 4] <- "Neither"
+data_2_high$Value <- factor(data_2_high$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
+data_1_low <- data_1 %>% filter(spp %in% diet_under_0.05) %>% left_join(Predator_value_ts, by= "spp") %>% filter(spp !="mesopelagics")
+data_1_low$Value <- factor(data_1_low$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
+data_2_low <- data_2 %>% filter(spp %in% diet_under_0.05) %>% left_join(Predator_value_ts, by= "spp") %>% filter(spp !="mesopelagics")
+data_2_low$Value <- factor(data_2_low$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
 
+plot1_high_diet <- data_1_high %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
+  xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + labs(colour= "Species with high diet proportion", title= "A") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + 
+ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.50.jpeg")
+plot1_high_diet
 
-#Graph with non-commercially valuable predators
-new_noncomm <- noncommerical_predators[- c(9,7,11,4,6,17,1,12,8,10,19,5,16,18,15,14,13,3)] #Remove predators that have commercial value as well 
-plot1_noncomm <- data_1 %>% filter(spp %in% new_noncomm) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Relative biomass") + 
-scale_color_discrete(type = "viridis", labels= c("Western Gull" = "Western gull", "Tufted Puffin" = "Tufted puffin", "Sea Lions"= "Sea lions", "Resident Orcas"= "Resident orcas", "Leach's S. Petrel" ="Leach's s. petrel", "Juv. Ele. Seal"="Juv. elephant seal", "Double corm."= "Double cormorant", "Brandt's corm." = "Brandt's cormorant", "Juv. rock." = "Juv. rockfish")) + 
- labs(colour= "Non-commercial predators", title= "B") + ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/plot.noncommercial.50.jpeg")
-plot1_noncomm    
+plot2_high_diet <- data_2_high %>% filter(spp %in% diet_over_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
+xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Juv. Ele. Seal" = "Juv n. elephant seal")) + labs(colour= "Species with high diet proportion", title= "B") + labs(colour= "Species with high diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + 
+ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.25.jpeg")
+plot2_high_diet
 
-#Graph for marine mammals
-plot1_mammals <- data_1 %>% filter(spp %in% mammals) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Relative biomass") + 
-theme_bw() + 
-scale_color_discrete(type = "viridis", labels= c("Adult N. Ele. Seal" = "Adult n. elephant seal", "Juv. Ele. Seal"= "Juv. elephant seal", "Resident Orcas"= "Resident orcas", "Sea Lions"= "Sea lions", "Transient Orcas"= "Transient orcas")) + 
-theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
-labs(colour = "Marine mammals", title= "A") +
-ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/plot.mammals.50.jpeg")
-plot1_mammals
-#Seperates legend and saves it as pdf document 
-#legend <- get_legend(plot1_mammals)
-#pdf("/Users/SallyDowd/Documents/OTZ.manuscript/Images/Legends/mammals.legend.pdf")
-#grid.draw(legend)
-#dev.off()
+plot1_low_diet <- data_1_edt %>% filter(spp %in% diet_under_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
+  xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + 
+ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.50.jpeg")
+plot1_low_diet
 
-#Graph for species with highest economic value
-plot1_high.price <- data_1 %>% filter(spp %in% high.price) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= factor(spp))) + xlab("Month") + ylab("Relative biomass") + 
-scale_color_discrete(type= "viridis", labels= c("Albacore", "Lingcod", "Sablefish", "Salmon", "Shelf rockfish", "Shortspine thornyhead")) + labs(colour = "Commercial predators", title= "B") + standard_theme
-ggsave(width = 6, height = 5, "~/Documents/OTZ.manuscript/Images/plot.highprice.50.jpeg")
-plot1_high.price
+plot2_low_diet <- data_2_edt %>% filter(spp %in% diet_under_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
+xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + 
+ggsave(width = 6, height = 6, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.25.jpeg")
+plot2_low_diet
+
+library(ggpubr)
+combo_ts_high_diet <- ggarrange(plot1_high_diet + rremove("xlab") + rremove("ylab"), plot2_high_diet + rremove("xlab") + rremove("ylab"), ncol = 2, nrow = 1)
+
+annotate_figure(combo_ts_high_diet, bottom= text_grob("Year", size=14), left= text_grob("Relative biomass", size=14, rot=90)) + 
+ggsave(width = 12, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/ts.combo.highdiet.jpeg")
+
+combo_ts_low_diet <- ggarrange(plot1_low_diet + rremove("xlab") + rremove("ylab"), plot2_low_diet + rremove("xlab") + rremove("ylab"), ncol = 2, nrow = 1)
+
+annotate_figure(combo_ts_low_diet, bottom= text_grob("Year", size=14), left= text_grob("Relative biomass", size=14, rot=90)) + 
+ggsave(width = 12, height = 7, "~/Documents/OTZ.Manuscript/Images/Sub.2/ts.combo.lowdiet.jpeg")
+
 ```
 
 
